import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
}

group = 'de.skyslycer'
version = '1.1'

sourceCompatibility = "1.8"
targetCompatibility = "1.8"

compileJava.options.encoding "UTF-8"

repositories {
    mavenCentral()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven {
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
    maven {
        name = "sonatype-oss-snapshots"
        url = "https://oss.sonatype.org/content/repositories/snapshots/"
    }
    maven {
        url "https://plugins.gradle.org/m2/"
    }
    maven { url "https://repo.dmulloy2.net/repository/public/" }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.10.9'
    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.6.0";
    compileOnly group: 'io.netty', name: 'netty-all', version: '4.1.24.Final';
    implementation 'net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT'
    implementation 'net.kyori:adventure-text-serializer-bungeecord:4.0.0-SNAPSHOT'
}

processResources {
    from(sourceSets.main.resources.srcDirs) {
        filter ReplaceTokens, tokens: [version: version]
    }
}